Scope viewable punches to current user.

--- a/app/views/punches/_form.html.erb
+++ b/app/views/punches/_form.html.erb
@@ -61,6 +61,10 @@
     <%= f.text_field :notes %>
   </div>
 
+  <div class="field">
+    <%= f.hidden_field :user_id, {value: current_user.id} %>
+  </div>
+
   <div class="actions">
     <%= f.submit class: "btn btn-primary" %>
   </div>
