Make user account editable, improve site navigation, and add department and initials to user account options

--- a/app/views/punches/index.html.erb
+++ b/app/views/punches/index.html.erb
@@ -34,4 +34,6 @@
   </tbody>
 </table>
 
+<%= link_to "Punch In", new_punch_path %> | 
+<%= link_to "Edit Account", edit_user_registration_path %> | 
 <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
